[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = ["cp3{9,10,11,12,13}-{win,macosx,manylinux}_*"]
build-frontend = "build[uv]"

test-command = ["uv run --with 'numpy>=2.0' python -m unittest discover {project}/test"]
test-requires = [
    "jax[cpu]",
    "scipy",
    "matplotlib",
    "pyvirtualdisplay",
    "gymnasium",
    "ray;python_version<'3.13'"
]

[[tool.cibuildwheel.overrides]]
select = "cp3{9,10,11,12}-*"
inherit.test-command = "append"
test-command = "uv run --with 'numpy<2.0' python -m unittest discover {project}/test"
