[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = ["cp3{9,10,11,12,13}-{macosx_*,{win,????linux}_*64}"]
build-frontend = "build[uv]"

test-command = ["uv run python -m unittest discover {project}/test"]
test-requires = [
    "gymnasium",
]

[[tool.cibuildwheel.overrides]]
select = "cp3{9,10,11,12}-{win,macosx,manylinux}_*"
inherit.test-requires = "append"
test-requires = "ray"

[[tool.cibuildwheel.overrides]]
select = "cp3{9,10,11,12}-{win,macosx,manylinux}_*"
inherit.test-requires = "append"
test-requires = "jax[cpu]"


[[tool.cibuildwheel.overrides]]
select = "cp3{9,10,11,12}-{macosx,manylinux}_*"
inherit.test-command = "append"
test-command = "uv run --with 'numpy<2.0' python -m unittest discover {project}/test"


[[tool.cibuildwheel.overrides]]
select = "cp3{9,10,11,12}-win_*"
inherit.test-command = "append"
test-command = "uv run --with numpy<2.0 python -m unittest discover {project}/test"
